--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real Time Clock</title>
+  <title>Real Time Digital Clock</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,4 +19,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
